<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAE9D5"
    tools:context=".Rectangulo">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_cuadrado"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="162dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="124dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/rectangulo" />

    <EditText
        android:id="@+id/et_lado_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/editText_base"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_lado_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/editText_altura"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lado_b" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lado_h">

        <RadioButton
            android:id="@+id/rb_area_rectangulo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt_area"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_diagonal_rectangulo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt_diagonal"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_perimetro_rectangulo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt_perimetro"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_calcular_rectangulo"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF9800"
        android:onClick="Calcular_rectangulo"
        android:text="@string/button_calcular"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="12dp"
        android:text="@string/txt_lado_h"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_lado_b"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/txt_resultado_rectangulo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_resultado"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular_rectangulo" />

    <Button
        android:id="@+id/btn_regresar_rectangulo"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:onClick="Regresar_rectangulo"
        android:text="@string/button_regresar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resultado_rectangulo" />
</androidx.constraintlayout.widget.ConstraintLayout>