<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEFFB"
    tools:context=".Cuadrado">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_cuadrado"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="164dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cuadrado" />

    <Button
        android:id="@+id/btn_calcular_cuadrado"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#9C27B0"
        android:onClick="Calcular_cuadrado"
        android:text="@string/button_calcular"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lado_a">

        <RadioButton
            android:id="@+id/rb_area_cuadrado"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt_area"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_diagonal_cuadrado"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt_diagonal"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_perimetro_cuadrado"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt_perimetro"
            android:textSize="24sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_lado_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/editText_ladoA"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txt_resultado_cuadrado"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:text="@string/txt_resultado"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular_cuadrado" />

    <Button
        android:id="@+id/btn_regresar_cuadrado"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000000"
        android:onClick="Regresar_cuadrado"
        android:text="@string/button_regresar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resultado_cuadrado" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_lado_a"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>