<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDFADE"
    tools:context=".Circulo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/circulo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/circulo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_circulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_radio_circulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/editText_radio"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_radio_circulo">

        <RadioButton
            android:id="@+id/rb_area_circulo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt_area"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_longuitud_circulo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt_longuitud"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_diametro_circulo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbt_diametro"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_calcular_circulo"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#4CAF50"
        android:onClick="Calcular_circulo"
        android:text="@string/button_calcular"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <TextView
        android:id="@+id/txt_resultado_circulo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/txt_resultado"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular_circulo" />

    <Button
        android:id="@+id/btn_regresar_circulo"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#000000"
        android:onClick="Regresar_circulo"
        android:text="@string/button_regresar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resultado_circulo" />
</androidx.constraintlayout.widget.ConstraintLayout>